chenged it for first time

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>My third repo</title>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur totam consequatur, incidunt tempore explicabo eum ratione dolor esse nihil soluta! Quisquam, iure rerum architecto perferendis nemo beatae vel totam vitae.
+    </p>
 </head>
 <body>
     <h2>This is a box,I am making for practicing purpase</h2>
