--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>My third repo</title>
     <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur totam consequatur, incidunt tempore explicabo eum ratione dolor esse nihil soluta! Quisquam, iure rerum architecto perferendis nemo beatae vel totam vitae.
+        lore
     </p>
 </head>
 <body>
