--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>My third repo</title>
     <p>
-        lore
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eaque quo, ex ab assumenda corporis maiores dolor deserunt aliquid ipsam? Cum alias earum neque illo officia, asperiores harum soluta sit!
     </p>
 </head>
 <body>
