changed once more

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>My third repo</title>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eaque quo, ex ab assumenda corporis maiores dolor deserunt aliquid ipsam? Cum alias earum neque illo officia, asperiores harum soluta sit!
-    </p>
+    
 </head>
 <body>
     <h2>This is a box,I am making for practicing purpase</h2>
-</body>
+
+    <div class="abc"></div>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eaque quo, ex ab assumenda corporis maiores dolor deserunt aliquid ipsam? Cum alias earum neque illo officia, asperiores harum soluta sit!
+    </p>
+   </body>
 </html>
