--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eaque quo, ex ab assumenda corporis maiores dolor deserunt aliquid ipsam? Cum alias earum neque illo officia, asperiores harum soluta sit!
     </p>
+    <img src="Capture.PNG" alt="">
+    <img src="natural.jpg" alt="">
+    <img src="me.jpg" alt="">
    </body>
 </html>
